--- a/page3.html
+++ b/page3.html
@@ -102,7 +102,7 @@
     </div>
 
     <div class="col-sm-12 ">
-        <a href="B10756004_work.html" class="btn btn-block text-warning">
+        <a href="index.html" class="btn btn-block text-warning">
             <h2>回首頁</h2>
         </a>
     </div>
