--- a/page3.html
+++ b/page3.html
@@ -20,7 +20,7 @@
     }
     
     .jumbotron {
-        background-image: url(img/top.jpg);
+        background-image: url(img/Top.jpg);
         height: 400px;
         background-repeat: no-repeat;
         background-position: center;
