--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
 
 <style>
     .jumbotron {
-        background-image: url(img/top.jpg);
+        background-image: url(img/Top.jpg);
         height: 400px;
         background-repeat: no-repeat;
         background-position: center;
@@ -60,7 +60,7 @@
                 <img src="img/pg2.jpg" class="rounded img-fluid" height="500" width="400">
             </div>
             <div class="col-sm-12 ">
-                <a href="B10756004_work.html" class="btn btn-block text-warning">
+                <a href="index.html" class="btn btn-block text-warning">
                     <h2>回首頁</h2>
                 </a>
             </div>
