--- a/page3.html
+++ b/page3.html
@@ -20,7 +20,7 @@
     }
     
     .jumbotron {
-        background-image: url(img/top.jpg);
+        background-image: url(img/Top.jpg);
         height: 400px;
         background-repeat: no-repeat;
         background-position: center;
@@ -102,7 +102,7 @@
     </div>
 
     <div class="col-sm-12 ">
-        <a href="B10756004_work.html" class="btn btn-block text-warning">
+        <a href="index.html" class="btn btn-block text-warning">
             <h2>回首頁</h2>
         </a>
     </div>
