--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                     <h2>遊戲美景</h2>
                 </a>
             </div>
+            <div class="col-sm">
+                <a href="page4.html" class="btn">
+                    <h2>瀏覽問卷</h2>
+                </a>
+            </div>
         </div>
     </div>
 
